<resources>
    <string name="app_name">EzBill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
    <string name="zane">Zane</string>
    <string name="finance">Finance</string>
    <string name="roommate">Roommate</string>
    <string name="water_bill">Water bill</string>
    <string name="electricity_bill">Electricity bill</string>
    <string name="hi">Hi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="your_text_will_appear_here">your_text_will_appear_here</string>
</resources>